backported configuration for TCP nagling from 2.4 (http://jira.jboss.com/jira/browse/JGRP-331)